add layout, styles

--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-index.html
+<!DOCTYPE html>
+<html>
+<head>
+	<meta http-equiv="refresh" content="2">
+	<link rel="stylesheet" type="text/css" href="layoutstyles.css">
+	<title>Layout</title>
+</head>
+<body>
+	<header></header>
+	<nav></nav>
+	<div id="container">
+		<div class="teil" id="left"></div>
+		<div id="middle">
+			<div class="smalldiv"></div>
+			<div class="smalldiv"></div>
+			<div class="smalldiv"></div>
+			<div class="smalldiv"></div>
+			<div class="smalldiv"></div>
+			<div class="smalldiv"></div>
+			<div class="widediv"></div>
+		</div>
+		<div class="teil" id="right"></div>		
+	</div>
+	<footer></footer>
+</body>
+</html>
