--- a/amazon/index.html
+++ b/amazon/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="amazonstyle.css">
-	<title>Layout</title>
+	<title>Amazon</title>
 </head>
 <body>
 	<header>
-		<div> <img src="" alt="Amazon Foto"></div>
+		<!--<div> <img src="" alt="Amazon Foto"></div>
 		<div> <input type="text" name=""></div>
 		<div> <p>Shop Today's Deals</p></div>
 		<div>Deliver to <br>
@@ -14,15 +14,18 @@
 		<nav> </nav>
 		<div>
 			<ul>
-				<li><input type="button" name="DE"></li>
+				<li><input class ="button" type="button" name="DE"></li>
 				<li> <input type="button" name="Hallo! Anmelden <br>
 					<b>Konto und ol"></li>
 				<li> <input type="button" name="<b>Bestellungen"></li>
 				<li><input type="button" name="Einkaufswagen"></li>
 			</ul>
-		</div>
+		</div>-->
 
 	</header>
+	<div id="bar">
+		
+	</div>
 	<div id="container">
 		<div class="teil" id="left"></div>
 		<div id="middle">
@@ -32,7 +35,15 @@
 			<div class="smalldiv"></div>
 			<div class="smalldiv"></div>
 			<div class="smalldiv"></div>
-			<div class="widediv"></div>
+			<div class="smalldiv"></div>
+			<div class="smalldiv"></div>
+			<div class="smalldiv"></div>
+			<div class="smalldiv"></div>
+			<div class="smalldiv"></div>
+			<div class="smalldiv"></div>
+			<div class="smalldiv"></div>
+			<div class="smalldiv"></div>
+			<div class="smalldiv"></div>			
 		</div>
 		<div class="teil" id="right"></div>		
 	</div>
