--- a/amazon/index.html
+++ b/amazon/index.html
@@ -6,46 +6,43 @@
 </head>
 <body>
 	<header>
-		<!--<div> <img src="" alt="Amazon Foto"></div>
-		<div> <input type="text" name=""></div>
-		<div> <p>Shop Today's Deals</p></div>
-		<div>Deliver to <br>
+		<div id="logo"><img src="" alt="Amazon Foto"></div>
+		<div id="input"><input type="text" name=""></div>
+		<div id="shop"><p>Shop Today's Deals</p></div>
+		<div id="deliver">Deliver to <br>
 				Austria	</div>
-		<nav> </nav>
+		<nav id="nav2"> </nav>
 		<div>
-			<ul>
+			<ul id="list">
 				<li><input class ="button" type="button" name="DE"></li>
 				<li> <input type="button" name="Hallo! Anmelden <br>
 					<b>Konto und ol"></li>
 				<li> <input type="button" name="<b>Bestellungen"></li>
 				<li><input type="button" name="Einkaufswagen"></li>
 			</ul>
-		</div>-->
+		</div>
 
 	</header>
 	<div id="bar">
 		
 	</div>
 	<div id="container">
-		<div class="teil" id="left"></div>
+		<div id="left"><img src="img/sidebar.png" alt="Yes"></div>
 		<div id="middle">
-			<div class="smalldiv"></div>
-			<div class="smalldiv"></div>
-			<div class="smalldiv"></div>
-			<div class="smalldiv"></div>
-			<div class="smalldiv"></div>
-			<div class="smalldiv"></div>
-			<div class="smalldiv"></div>
-			<div class="smalldiv"></div>
-			<div class="smalldiv"></div>
-			<div class="smalldiv"></div>
-			<div class="smalldiv"></div>
-			<div class="smalldiv"></div>
-			<div class="smalldiv"></div>
-			<div class="smalldiv"></div>
-			<div class="smalldiv"></div>			
+			<a href="https://www.amazon.com/AmazonBasics-Nylon-Braided-Lightning-Compatible/dp/B01F9RH0R4/ref=sr_1_1?_encoding=UTF8&pf_rd_i=desktop&pf_rd_m=ATVPDKIKX0DER&pf_rd_p=4cb6ccb4-2135-4571-9a14-cb6d1cb49408&pf_rd_r=4687RWEK5Y5AE3MMSV2C&pf_rd_t=36701&qid=1562748158&s=home-garden&sr=1-1&srs=10112675011" title="BUY THIS SHIT"><img src="img/product.png" alt="BUY THIS SHIT"></a>
+			<a href="https://www.amazon.com/AmazonBasics-Nylon-Braided-Lightning-Compatible/dp/B01F9RH0R4/ref=sr_1_1?_encoding=UTF8&pf_rd_i=desktop&pf_rd_m=ATVPDKIKX0DER&pf_rd_p=4cb6ccb4-2135-4571-9a14-cb6d1cb49408&pf_rd_r=4687RWEK5Y5AE3MMSV2C&pf_rd_t=36701&qid=1562748158&s=home-garden&sr=1-1&srs=10112675011" title="BUY THIS SHIT"><img src="img/product.png" alt="BUY THIS SHIT"></a>
+			<a href="https://www.amazon.com/AmazonBasics-Nylon-Braided-Lightning-Compatible/dp/B01F9RH0R4/ref=sr_1_1?_encoding=UTF8&pf_rd_i=desktop&pf_rd_m=ATVPDKIKX0DER&pf_rd_p=4cb6ccb4-2135-4571-9a14-cb6d1cb49408&pf_rd_r=4687RWEK5Y5AE3MMSV2C&pf_rd_t=36701&qid=1562748158&s=home-garden&sr=1-1&srs=10112675011" title="BUY THIS SHIT"><img src="img/product.png" alt="BUY THIS SHIT"></a>
+			<a href="https://www.amazon.com/AmazonBasics-Nylon-Braided-Lightning-Compatible/dp/B01F9RH0R4/ref=sr_1_1?_encoding=UTF8&pf_rd_i=desktop&pf_rd_m=ATVPDKIKX0DER&pf_rd_p=4cb6ccb4-2135-4571-9a14-cb6d1cb49408&pf_rd_r=4687RWEK5Y5AE3MMSV2C&pf_rd_t=36701&qid=1562748158&s=home-garden&sr=1-1&srs=10112675011" title="BUY THIS SHIT"><img src="img/product.png" alt="BUY THIS SHIT"></a>
+			<a href="https://www.amazon.com/AmazonBasics-Nylon-Braided-Lightning-Compatible/dp/B01F9RH0R4/ref=sr_1_1?_encoding=UTF8&pf_rd_i=desktop&pf_rd_m=ATVPDKIKX0DER&pf_rd_p=4cb6ccb4-2135-4571-9a14-cb6d1cb49408&pf_rd_r=4687RWEK5Y5AE3MMSV2C&pf_rd_t=36701&qid=1562748158&s=home-garden&sr=1-1&srs=10112675011" title="BUY THIS SHIT"><img src="img/product.png" alt="BUY THIS SHIT"></a>
+			<a href="https://www.amazon.com/AmazonBasics-Nylon-Braided-Lightning-Compatible/dp/B01F9RH0R4/ref=sr_1_1?_encoding=UTF8&pf_rd_i=desktop&pf_rd_m=ATVPDKIKX0DER&pf_rd_p=4cb6ccb4-2135-4571-9a14-cb6d1cb49408&pf_rd_r=4687RWEK5Y5AE3MMSV2C&pf_rd_t=36701&qid=1562748158&s=home-garden&sr=1-1&srs=10112675011" title="BUY THIS SHIT"><img src="img/product.png" alt="BUY THIS SHIT"></a>
+			<a href="https://www.amazon.com/AmazonBasics-Nylon-Braided-Lightning-Compatible/dp/B01F9RH0R4/ref=sr_1_1?_encoding=UTF8&pf_rd_i=desktop&pf_rd_m=ATVPDKIKX0DER&pf_rd_p=4cb6ccb4-2135-4571-9a14-cb6d1cb49408&pf_rd_r=4687RWEK5Y5AE3MMSV2C&pf_rd_t=36701&qid=1562748158&s=home-garden&sr=1-1&srs=10112675011" title="BUY THIS SHIT"><img src="img/product.png" alt="BUY THIS SHIT"></a>
+			<a href="https://www.amazon.com/AmazonBasics-Nylon-Braided-Lightning-Compatible/dp/B01F9RH0R4/ref=sr_1_1?_encoding=UTF8&pf_rd_i=desktop&pf_rd_m=ATVPDKIKX0DER&pf_rd_p=4cb6ccb4-2135-4571-9a14-cb6d1cb49408&pf_rd_r=4687RWEK5Y5AE3MMSV2C&pf_rd_t=36701&qid=1562748158&s=home-garden&sr=1-1&srs=10112675011" title="BUY THIS SHIT"><img src="img/product.png" alt="BUY THIS SHIT"></a>
+			<a href="https://www.amazon.com/AmazonBasics-Nylon-Braided-Lightning-Compatible/dp/B01F9RH0R4/ref=sr_1_1?_encoding=UTF8&pf_rd_i=desktop&pf_rd_m=ATVPDKIKX0DER&pf_rd_p=4cb6ccb4-2135-4571-9a14-cb6d1cb49408&pf_rd_r=4687RWEK5Y5AE3MMSV2C&pf_rd_t=36701&qid=1562748158&s=home-garden&sr=1-1&srs=10112675011" title="BUY THIS SHIT"><img src="img/product.png" alt="BUY THIS SHIT"></a>
+			<a href="https://www.amazon.com/AmazonBasics-Nylon-Braided-Lightning-Compatible/dp/B01F9RH0R4/ref=sr_1_1?_encoding=UTF8&pf_rd_i=desktop&pf_rd_m=ATVPDKIKX0DER&pf_rd_p=4cb6ccb4-2135-4571-9a14-cb6d1cb49408&pf_rd_r=4687RWEK5Y5AE3MMSV2C&pf_rd_t=36701&qid=1562748158&s=home-garden&sr=1-1&srs=10112675011" title="BUY THIS SHIT"><img src="img/product.png" alt="BUY THIS SHIT"></a>
+			<a href="https://www.amazon.com/AmazonBasics-Nylon-Braided-Lightning-Compatible/dp/B01F9RH0R4/ref=sr_1_1?_encoding=UTF8&pf_rd_i=desktop&pf_rd_m=ATVPDKIKX0DER&pf_rd_p=4cb6ccb4-2135-4571-9a14-cb6d1cb49408&pf_rd_r=4687RWEK5Y5AE3MMSV2C&pf_rd_t=36701&qid=1562748158&s=home-garden&sr=1-1&srs=10112675011" title="BUY THIS SHIT"><img src="img/product.png" alt="BUY THIS SHIT"></a>
+			<a href="https://www.amazon.com/AmazonBasics-Nylon-Braided-Lightning-Compatible/dp/B01F9RH0R4/ref=sr_1_1?_encoding=UTF8&pf_rd_i=desktop&pf_rd_m=ATVPDKIKX0DER&pf_rd_p=4cb6ccb4-2135-4571-9a14-cb6d1cb49408&pf_rd_r=4687RWEK5Y5AE3MMSV2C&pf_rd_t=36701&qid=1562748158&s=home-garden&sr=1-1&srs=10112675011" title="BUY THIS SHIT"><img src="img/product.png" alt="BUY THIS SHIT"></a>
 		</div>
-		<div class="teil" id="right"></div>		
+ 		
 	</div>
 	<footer></footer>
 </body>
