add img, layout, formatting

--- a/amazon/index.html
+++ b/amazon/index.html
@@ -6,26 +6,24 @@
 </head>
 <body>
 	<header>
-		<div id="logo"><img src="" alt="Amazon Foto"></div>
-		<div id="input"><input type="text" name=""></div>
-		<div id="shop"><p>Shop Today's Deals</p></div>
-		<div id="deliver">Deliver to <br>
-				Austria	</div>
-		<nav id="nav2"> </nav>
-		<div>
-			<ul id="list">
-				<li><input class ="button" type="button" name="DE"></li>
-				<li> <input type="button" name="Hallo! Anmelden <br>
-					<b>Konto und ol"></li>
-				<li> <input type="button" name="<b>Bestellungen"></li>
-				<li><input type="button" name="Einkaufswagen"></li>
-			</ul>
+		<div id=header>	
+			<div><img id="logo" src="img/logo.png" alt="Amazon Foto"></div>
+			<div id="input"><input type="text" placeholder="We won"></div>
+			<div id="rightimg"><a href="https://www.amazon.com/b/ref=nav_swm_AE_EN_SWM_Deals?ie=UTF8&node=15529609011&pf_rd_p=0b6ad79d-73e4-4037-b7c7-83edf48c7d06&pf_rd_s=nav-sitewide-msg-export&pf_rd_t=4201&pf_rd_i=navbar-4201&pf_rd_m=ATVPDKIKX0DER&pf_rd_r=6E49WDRQ94HGGTNEGWSP&pf_rd_r=6E49WDRQ94HGGTNEGWSP&pf_rd_p=0b6ad79d-73e4-4037-b7c7-83edf48c7d06"><img src="img/rightimg.png" alt="This is the top right image."></a></div>	
+			<div id="leftimg"><img src="img/leftimg.png" alt="This is the bottom left image."></div>
+			<nav>
+				<li><a href="https://www.amazon.com/gp/site-directory?ref_=nav_shopall_btn" title="homebutton">Departments</a></li>
+				<li><a href="https://www.amazon.com/ap/signin?_encoding=UTF8&openid.assoc_handle=usflex&openid.claimed_id=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0%2Fidentifier_select&openid.identity=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0%2Fidentifier_select&openid.mode=checkid_setup&openid.ns=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0&openid.ns.pape=http%3A%2F%2Fspecs.openid.net%2Fextensions%2Fpape%2F1.0&openid.pape.max_auth_age=0&openid.return_to=https%3A%2F%2Fwww.amazon.com%2Fgp%2Fyourstore%2Fcard%3Fie%3DUTF8%26ref_%3Dcust_rec_intestitial_signin" title="aboutmebutton">Today's Deals</a></li>
+				<li><a href="https://www.amazon.com/ref=nav_logo" title="blogbutton">Your Amazon.com</a></li>
+				<li><a href="https://www.amazon.com/gift-cards/b/?ie=UTF8&node=2238192011&ref_=nav_cs_gift_cards" title="contactbutton">Gift Cards</a></li>
+				<li><a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=508510&ref_=nav_cs_help" title="homebutton">Help</a></li>
+				<li><a href="https://www.amazon.com/gp/browse.html?node=16115931011&ref_=nav_cs_registry" title="homebutton">Registry</a></li>
+				<li><a href="https://www.amazon.com/b/?_encoding=UTF8&ld=AZUSSOA-sell&node=12766669011&ref_=nav_cs_sell" title="homebutton">Sell</a></li>
+			</nav>
+				
+			</div>
 		</div>
-
 	</header>
-	<div id="bar">
-		
-	</div>
 	<div id="container">
 		<div id="left"><img src="img/sidebar.png" alt="Yes"></div>
 		<div id="middle">
